WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208481
Align garbage collection for XMLHttpRequest objects with the specification
https://bugs.webkit.org/show_bug.cgi?id=208481
Summary
Align garbage collection for XMLHttpRequest objects with the specification
Chris Dumez
Reported
2020-03-02 15:45:02 PST
Simplify XHR JS wrapper lifetime management and align with the specification: -
https://xhr.spec.whatwg.org/#garbage-collection
Attachments
Patch
(11.65 KB, patch)
2020-03-02 15:48 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(11.70 KB, patch)
2020-03-03 13:08 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(13.33 KB, patch)
2020-03-06 14:05 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(22.17 KB, patch)
2020-03-06 16:32 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(22.91 KB, patch)
2020-03-06 16:47 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(22.89 KB, patch)
2020-03-09 12:26 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-03-02 15:48:56 PST
Created
attachment 392202
[details]
Patch
Chris Dumez
Comment 2
2020-03-03 13:08:59 PST
Created
attachment 392318
[details]
Patch
Chris Dumez
Comment 3
2020-03-06 14:05:45 PST
Created
attachment 392770
[details]
Patch
Chris Dumez
Comment 4
2020-03-06 16:32:11 PST
Created
attachment 392802
[details]
Patch
Chris Dumez
Comment 5
2020-03-06 16:47:41 PST
Created
attachment 392809
[details]
Patch
Ryosuke Niwa
Comment 6
2020-03-09 11:12:30 PDT
Comment on
attachment 392809
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=392809&action=review
> Source/WebCore/ChangeLog:11 > + e now override ActiveDOMObject::hasPendingActivity() to match exactly the text
Nit: e -> We?
> Source/WebCore/xml/XMLHttpRequest.cpp:1167 > + || hasEventListeners(eventNames().loadEvent) > + || hasEventListeners(eventNames().timeoutEvent)
Can we order these events in alphabetical/lexicological order?
Ryosuke Niwa
Comment 7
2020-03-09 11:24:06 PDT
Comment on
attachment 392809
[details]
Patch Oops, I didn't meant to set cq+
Chris Dumez
Comment 8
2020-03-09 12:26:15 PDT
Created
attachment 393061
[details]
Patch
WebKit Commit Bot
Comment 9
2020-03-09 13:17:27 PDT
Comment on
attachment 393061
[details]
Patch Clearing flags on attachment: 393061 Committed
r258159
: <
https://trac.webkit.org/changeset/258159
>
WebKit Commit Bot
Comment 10
2020-03-09 13:17:29 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11
2020-03-09 13:23:17 PDT
<
rdar://problem/60239100
>
Darin Adler
Comment 12
2020-03-09 13:58:37 PDT
Comment on
attachment 393061
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=393061&action=review
> Source/WebCore/xml/XMLHttpRequestProgressEventThrottle.h:36 > class EventTarget;
Should have removed this.
Chris Dumez
Comment 13
2020-03-09 14:01:10 PDT
(In reply to Darin Adler from
comment #12
)
> Comment on
attachment 393061
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=393061&action=review
> > > Source/WebCore/xml/XMLHttpRequestProgressEventThrottle.h:36 > > class EventTarget; > > Should have removed this.
Indeed, will follow up, thanks.
Chris Dumez
Comment 14
2020-03-09 14:56:01 PDT
(In reply to Chris Dumez from
comment #13
)
> (In reply to Darin Adler from
comment #12
) > > Comment on
attachment 393061
[details]
> > Patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=393061&action=review
> > > > > Source/WebCore/xml/XMLHttpRequestProgressEventThrottle.h:36 > > > class EventTarget; > > > > Should have removed this. > > Indeed, will follow up, thanks.
<
https://trac.webkit.org/changeset/258165
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug