Source/WebCore/xml/XMLHttpRequest.h
@@ -130,8 +130,16 @@ public:
 
     WEBCORE_EXPORT void setMaximumIntervalForUserGestureForwarding(double);
 
+    bool hasPendingActivity() const final;
+
+    using EventTarget::dispatchEvent;
+    void dispatchEvent(Event&) override;
+
 private:
     explicit XMLHttpRequest(ScriptExecutionContext&);
+
+    // EventTarget.
+    void eventListenersDidChange() final;
 
     TextEncoding finalResponseCharset() const;
 
@@ -185,12 +193,7 @@ private:
 
     void dispatchErrorEvents(const AtomString&);
 
-    using EventTarget::dispatchEvent;
-    void dispatchEvent(Event&) override;
-
     Ref<TextResourceDecoder> createDecoder() const;
-
-    void networkErrorTimerFired();
 
     unsigned m_async : 1;
     unsigned m_includeCredentials : 1;
@@ -214,7 +217,11 @@ private:
     RefPtr<FormData> m_requestEntityBody;
     String m_mimeTypeOverride;
 
-    RefPtr<ThreadableLoader> m_loader;
+    struct LoadingActivity {
+        Ref<XMLHttpRequest> protectedThis; // Keep object alive while loading even if there is no longer a JS wrapper.
+        Ref<ThreadableLoader> loader;
+    };
+    Optional<LoadingActivity> m_loadingActivity;
 
     String m_responseEncoding;
 
@@ -235,7 +242,6 @@ private:
 
     mutable String m_allResponseHeaders;
 
-    Timer m_networkErrorTimer;
     Timer m_timeoutTimer;
 
     MonotonicTime m_sendingTime;
@@ -243,6 +249,7 @@ private:
     Optional<ExceptionCode> m_exceptionCode;
     RefPtr<UserGestureToken> m_userGestureToken;
     Seconds m_maximumIntervalForUserGestureForwarding;
+    bool m_hasRelevantEventListener { false };
 };
 
 inline auto XMLHttpRequest::responseType() const -> ResponseType
